fixed view_create scroll

--- a/static/create/style.css
+++ b/static/create/style.css
@@ -6,6 +6,30 @@
 	font-size: 20px;
 }
 
+.container-sunday{
+	overflow-y: scroll;
+}
+
+.container-monday{
+	overflow-y: scroll;
+}
+.container-tuesday{
+	overflow-y: scroll;
+}
+.container-wednesday{
+	overflow-y: scroll;
+}
+.container-thursday{
+	overflow-y: scroll;
+}
+.container-friday{
+	overflow-y: scroll;
+}
+.container-saturday{
+	overflow-y: scroll;
+}
+
+
 label{
 	margin-right: 10px;
 }
