--- a/static/create/style.css
+++ b/static/create/style.css
@@ -4,6 +4,7 @@
 
 *{
 	font-size: 20px;
+	overflow-x: hidden;
 }
 
 .container-sunday{
@@ -73,7 +74,7 @@ button, option, select{
 	margin-top: 50px;
 	opacity: 0.9;
 	grid-template-columns: repeat(7,14.28%);
-	grid-template-rows: 200px 1fr 100px;
+	grid-template-rows: 120px 1fr;
 	row-gap: 50px;
 	padding: 20px;
 	/*column-gap: 10px;*/
